// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lightning-datetimepicker default 1`] = `
<lightning-datetimepicker
  class="slds-form_compound"
>
  #shadow-root(open)
    <div
      class="slds-form slds-form_compound"
      tabindex="-1"
    >
      <fieldset
        class="slds-form-element"
      >
        <legend
          class="slds-form-element__legend slds-form-element__label"
        />
        <div
          class="slds-form-element__control"
        >
          <div
            class="slds-form-element__group"
          >
            <div
              class="slds-form-element__row"
            >
              <lightning-datepicker
                class="slds-form-element"
              >
                #shadow-root(open)
                  <div
                    class="slds-form-element slds-dropdown-trigger slds-dropdown-trigger_click slds-size_1-of-1"
                    tabindex="-1"
                  >
                    <label
                      class="slds-form-element__label"
                      for="input-2"
                    >
                      Date
                    </label>
                    <div
                      class="slds-form-element__control slds-input-has-icon slds-input-has-icon_right"
                    >
                      <input
                        class="slds-input"
                        id="input-2"
                        placeholder=""
                        type="text"
                      />
                      <lightning-button-icon
                        class="slds-input__icon slds-input__icon_right"
                      >
                        #shadow-root(open)
                          <button
                            class="slds-button slds-button_icon-bare"
                            title="Select a date"
                            type="button"
                          >
                            <lightning-primitive-icon>
                              #shadow-root(open)
                                <svg
                                  aria-hidden="true"
                                  class="slds-button__icon"
                                  data-key="event"
                                  focusable="false"
                                >
                                  <use
                                    xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#event"
                                  />
                                </svg>
                            </lightning-primitive-icon>
                            <span
                              class="slds-assistive-text"
                            >
                              Select a date
                            </span>
                          </button>
                      </lightning-button-icon>
                    </div>
                  </div>
              </lightning-datepicker>
              <lightning-timepicker
                class="slds-form-element"
              >
                #shadow-root(open)
                  <label
                    class="slds-form-element__label"
                    for="input-6"
                  >
                    Time
                  </label>
                  <div
                    class="slds-form-element__control"
                  >
                    <lightning-base-combobox
                      class="slds-combobox_container"
                    >
                      #shadow-root(open)
                        <div
                          aria-expanded="false"
                          aria-haspopup="listbox"
                          class="slds-combobox slds-dropdown-trigger slds-dropdown-trigger_click"
                          role="combobox"
                        >
                          <div
                            class="slds-combobox__form-element slds-input-has-icon slds-input-has-icon_right"
                            role="none"
                          >
                            <input
                              aria-autocomplete="list"
                              aria-controls="dropdown-element-6"
                              autocomplete="off"
                              class="slds-input slds-combobox__input"
                              id="input-6"
                              placeholder=""
                              role="textbox"
                              type="text"
                            />
                            <div
                              class="slds-input__icon-group slds-input__icon-group_right"
                            >
                              <lightning-icon
                                class="slds-icon-utility-clock slds-input__icon slds-input__icon_right slds-icon_container"
                              >
                                #shadow-root(open)
                                  <lightning-primitive-icon>
                                    #shadow-root(open)
                                      <svg
                                        aria-hidden="true"
                                        class="slds-icon slds-icon-text-default slds-icon_x-small"
                                        data-key="clock"
                                        focusable="false"
                                      >
                                        <use
                                          xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#clock"
                                        />
                                      </svg>
                                  </lightning-primitive-icon>
                              </lightning-icon>
                            </div>
                          </div>
                          <div
                            class="slds-listbox slds-listbox_vertical slds-dropdown slds-dropdown_fluid slds-dropdown_length-with-icon-5 slds-dropdown_left"
                            data-dropdown-element="true"
                            id="dropdown-element-6"
                            role="listbox"
                          />
                        </div>
                    </lightning-base-combobox>
                  </div>
              </lightning-timepicker>
            </div>
          </div>
        </div>
      </fieldset>
    </div>
</lightning-datetimepicker>
`;

exports[`lightning-datetimepicker renders help text 1`] = `
<lightning-datetimepicker
  class="slds-form_compound"
>
  #shadow-root(open)
    <div
      class="slds-form slds-form_compound"
      tabindex="-1"
    >
      <fieldset
        class="slds-form-element"
      >
        <legend
          class="slds-form-element__legend slds-form-element__label"
        />
        <lightning-helptext>
          #shadow-root(open)
            <pre>
              Hello hello
               
              utility:info
            </pre>
        </lightning-helptext>
        <div
          class="slds-form-element__control"
        >
          <div
            class="slds-form-element__group"
          >
            <div
              class="slds-form-element__row"
            >
              <lightning-datepicker
                class="slds-form-element"
              >
                #shadow-root(open)
                  <div
                    class="slds-form-element slds-dropdown-trigger slds-dropdown-trigger_click slds-size_1-of-1"
                    tabindex="-1"
                  >
                    <label
                      class="slds-form-element__label"
                      for="input-11"
                    >
                      Date
                    </label>
                    <div
                      class="slds-form-element__control slds-input-has-icon slds-input-has-icon_right"
                    >
                      <input
                        class="slds-input"
                        id="input-11"
                        placeholder=""
                        type="text"
                      />
                      <lightning-button-icon
                        class="slds-input__icon slds-input__icon_right"
                      >
                        #shadow-root(open)
                          <button
                            class="slds-button slds-button_icon-bare"
                            title="Select a date"
                            type="button"
                          >
                            <lightning-primitive-icon>
                              #shadow-root(open)
                                <svg
                                  aria-hidden="true"
                                  class="slds-button__icon"
                                  data-key="event"
                                  focusable="false"
                                >
                                  <use
                                    xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#event"
                                  />
                                </svg>
                            </lightning-primitive-icon>
                            <span
                              class="slds-assistive-text"
                            >
                              Select a date
                            </span>
                          </button>
                      </lightning-button-icon>
                    </div>
                  </div>
              </lightning-datepicker>
              <lightning-timepicker
                class="slds-form-element"
              >
                #shadow-root(open)
                  <label
                    class="slds-form-element__label"
                    for="input-15"
                  >
                    Time
                  </label>
                  <div
                    class="slds-form-element__control"
                  >
                    <lightning-base-combobox
                      class="slds-combobox_container"
                    >
                      #shadow-root(open)
                        <div
                          aria-expanded="false"
                          aria-haspopup="listbox"
                          class="slds-combobox slds-dropdown-trigger slds-dropdown-trigger_click"
                          role="combobox"
                        >
                          <div
                            class="slds-combobox__form-element slds-input-has-icon slds-input-has-icon_right"
                            role="none"
                          >
                            <input
                              aria-autocomplete="list"
                              aria-controls="dropdown-element-15"
                              autocomplete="off"
                              class="slds-input slds-combobox__input"
                              id="input-15"
                              placeholder=""
                              role="textbox"
                              type="text"
                            />
                            <div
                              class="slds-input__icon-group slds-input__icon-group_right"
                            >
                              <lightning-icon
                                class="slds-icon-utility-clock slds-input__icon slds-input__icon_right slds-icon_container"
                              >
                                #shadow-root(open)
                                  <lightning-primitive-icon>
                                    #shadow-root(open)
                                      <svg
                                        aria-hidden="true"
                                        class="slds-icon slds-icon-text-default slds-icon_x-small"
                                        data-key="clock"
                                        focusable="false"
                                      >
                                        <use
                                          xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#clock"
                                        />
                                      </svg>
                                  </lightning-primitive-icon>
                              </lightning-icon>
                            </div>
                          </div>
                          <div
                            class="slds-listbox slds-listbox_vertical slds-dropdown slds-dropdown_fluid slds-dropdown_length-with-icon-5 slds-dropdown_left"
                            data-dropdown-element="true"
                            id="dropdown-element-15"
                            role="listbox"
                          />
                        </div>
                    </lightning-base-combobox>
                  </div>
              </lightning-timepicker>
            </div>
          </div>
        </div>
      </fieldset>
    </div>
</lightning-datetimepicker>
`;
